Update: 불필요 임포트 제거 및 projects, educations margin 조정
Signed-off-by: 현재 <phyunjae7333@gmail.com>

--- a/src/styles/EducationPage.css
+++ b/src/styles/EducationPage.css
@@ -1,6 +1,6 @@
 .education-section {
   max-width: 1100px;
-  margin: 0 auto;
+  margin:  20em auto;
   padding: 2rem 1rem;
   text-align: center;
 }
