--- a/src/styles/ProjectModal.css
+++ b/src/styles/ProjectModal.css
@@ -102,9 +102,6 @@
     border-bottom-right-radius: 12px;
 }
 
-
-
-
 .image-gallery-section {
     margin-top: 2rem;
     margin-bottom: 3rem;
@@ -120,26 +117,23 @@
     margin-bottom: 20px;
 }
 
+/* ---------------------------------- */
+/* Swiper (이미지 갤러리) ------------ */
+/* ---------------------------------- */
+
 .project-swiper {
     width: 100%;
+    height: 450px;
     border-radius: 8px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
     background: #333;
 }
 
 .project-swiper .swiper-slide {
-    height: auto;
+    height: 100%;
     display: flex; 
     align-items: center;
     justify-content: center;
-}
-
-.project-image {
-    width: 100%;
-    height: auto; 
-    object-fit: contain;
-    border-radius: 8px;
-    max-height: 70vh; 
 }
 
 .swiper-image-wrapper {
@@ -147,17 +141,17 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 100px;
-    height: auto;
+    min-height: 100%;
+    height: 100%;
     background: #111;
 }
 
 .project-image {
     width: 100%;
     height: auto;
+    max-height: 100%;
     object-fit: contain; 
     border-radius: 8px;
-    max-height: 70vh;
 }
 
 
