글자색 변경
Signed-off-by: 현재 <phyunjae7333@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    --text-color: #213547;
+    /* --text-color: #213547; */
     --bg-color: #ffffff;
     --accent-color: #ff0055;
 }
