--- a/src/styles/ProjectModal.css
+++ b/src/styles/ProjectModal.css
@@ -92,11 +92,26 @@
     margin-bottom: 2rem;
     border-radius: 12px;
     overflow: hidden;
+    height: 700px;
+}
+
+.project-swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.slide-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 .slide-wrapper img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 8px;
 }
 
