--- a/src/styles/EducationPage.css
+++ b/src/styles/EducationPage.css
@@ -18,5 +18,9 @@
   top: 0;
   bottom: 0;
   width: 2px;
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.dark .education-grid::before {
   background: rgba(255, 255, 255, 0.1);
 }
