--- a/src/styles/ContactPage.css
+++ b/src/styles/ContactPage.css
@@ -73,6 +73,7 @@
     font-size: 1rem;
     color: var(--text-color);
     outline: none;
+    box-sizing: border-box;
     transition: border-color 0.3s;
 }
 
@@ -83,6 +84,7 @@
 .textarea {
     min-height: 150px;
     resize: vertical;
+    box-sizing: border-box;
 }
 
 .submit-btn {
